src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_case_2d@COL3A1-2D-1.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
l2:
  l2_d1:
    gene:
      hgnc_id: "HGNC:2201"
      hgnc_symbol: COL3A1
      ensembl_gene_id: ENSG00000168542
      ncbi_gene_id: "1281"

