src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_case_2e@APOB-2E.snap
---
source: src/strucvars/eval/del/section2.rs
expression: section
---
l2:
  l2_e:
    suggested_score: 0.9
    pvs1_result: pvs1

